name:                pandoc-mm
version:             0.1.0.0
synopsis:            Generate a mindmap from an org-mode file, complete with latex annotations
description:         Please see README.md
homepage:            https://github.com/vzaccaria/pandoc-mm
license:             BSD3
license-file:        LICENSE
author:              Vittorio Zaccaria
maintainer:          vittorio.zaccaria@gmail.com
copyright:           2016 - Vittorio Zaccaria
category:            Productivity
build-type:          Simple
cabal-version:       >=1.10

executable pandoc-mm
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , pandoc
                     , pandoc-types
                     , interpolate
                     , process
                     , directory
                     , mtl
                     , containers
                     , docopt
                     , system-filepath
                     , text
                     , monad-supply

